--- a/Day4/project-02/styles.css
+++ b/Day4/project-02/styles.css
@@ -2,12 +2,93 @@
 	box-sizing: border-box;
 }
 
-.sub-imgs {
-	width: 400px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	font-size: 16px;
+	font-weight: 400;
+	font-family: "Poppins", serif;
+}
+
+body {
+	background-color: #eff0f1;
+}
+
+a {
+	text-decoration: none;
+	color: #0e0e38;
+}
+
+ul,
+ol {
+	padding: 0;
+}
+
+h1 {
+	font-size: 32px;
+	font-weight: bold;
+	margin-bottom: 24px;
+	line-height: 1;
+}
+
+li {
+	list-style-type: none;
+	display: inline-block;
+	padding: 10px;
+	margin-right: 8px;
+	margin-bottom: 8px;
+	background-color: white;
+	border-radius: 8px;
 }
 
 img {
-	width: 119px;
-	height: 97px;
 	border-radius: 24px;
+}
+
+.collection-item {
+	width: 437px;
+	padding: 24px;
+	border-radius: 32px;
+	background-color: white;
+}
+
+.main-img {
+	width: 100%;
+}
+
+.sub-imgs {
+	width: 400px;
+	font-size: 0;
+	img {
+		margin-right: 16px;
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+}
+
+.collection-description {
+	background-color: red;
+}
+
+h2 {
+	width: 70%;
+	padding-right: 16px;
+	display: inline-block;
+	background-color: beige;
+}
+
+.quantity {
+	display: inline-block;
+	width: 30%;
+	text-align: right;
+	background-color: aqua;
 }
