--- a/Day11/assets/css/main-prefix.css
+++ b/Day11/assets/css/main-prefix.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* 
 ff: font-family
 fs: font-size
@@ -5,6 +12,7 @@ fw: font-weight
 */
 
 * {
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -43,8 +51,14 @@ a:visited {
 }
 
 .d-flex-between {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -53,6 +67,8 @@ a:visited {
 	font-family: "Poppins", serif;
 	color: #fff;
 	border-radius: 8px;
+	-webkit-transition: all ease-in-out 0.3s;
+	-o-transition: all ease-in-out 0.3s;
 	transition: all ease-in-out 0.3s;
 	cursor: pointer;
 	border: none;
@@ -81,6 +97,7 @@ a:visited {
 	font-size: 18px;
 	font-weight: 600;
 	font-family: "Poppins", serif;
+	-webkit-box-shadow: 0px 30px 30px -18px rgba(229, 89, 54, 0.16);
 	box-shadow: 0px 30px 30px -18px rgba(229, 89, 54, 0.16);
 	margin-left: auto;
 	margin-right: auto;
@@ -101,6 +118,8 @@ header {
 			color: #676a6c;
 			font-size: 14px;
 			font-weight: 500;
+			-webkit-transition: all ease-in-out 0.3s;
+			-o-transition: all ease-in-out 0.3s;
 			transition: all ease-in-out 0.3s;
 			position: relative;
 			&:hover {
@@ -108,6 +127,8 @@ header {
 			}
 			&::after {
 				width: 0;
+				-webkit-transition: width ease-in-out 0.3s;
+				-o-transition: width ease-in-out 0.3s;
 				transition: width ease-in-out 0.3s;
 				content: "";
 				position: absolute;
@@ -147,19 +168,29 @@ header {
 /* recent */
 
 #recent {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: stretch;
+	-ms-flex-align: stretch;
 	align-items: stretch;
 	gap: 56px;
 }
 
 #recent .left-content,
 #recent .right-content {
+	-ms-flex-negative: 1;
 	flex-shrink: 1;
+	-webkit-box-flex: 1;
+	-ms-flex-positive: 1;
 	flex-grow: 1;
 }
 
 #recent .left-content {
+	-ms-flex-preferred-size: 626px;
 	flex-basis: 626px;
 	h2 {
 		font-size: 40px;
@@ -173,6 +204,7 @@ header {
 	background-color: #ececec;
 	border-radius: 10px;
 	padding: 30px;
+	-ms-flex-preferred-size: 488px;
 	flex-basis: 488px;
 
 	form {
@@ -184,6 +216,8 @@ header {
 		padding: 18px 20px;
 		background-color: #fff;
 		border-radius: 8px;
+		-webkit-box-flex: 1;
+		-ms-flex-positive: 1;
 		flex-grow: 1;
 		border: none;
 	}
@@ -197,8 +231,14 @@ header {
 	}
 
 	.recent-item {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-pack: start;
+		-ms-flex-pack: start;
 		justify-content: flex-start;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 		gap: 20px;
 		margin-bottom: 20px;
@@ -226,6 +266,7 @@ header {
 
 .blogs__inner {
 	gap: 30px;
+	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 	padding: 112px 0 80px;
 	margin-left: auto;
@@ -234,6 +275,8 @@ header {
 
 #blogs .blog-item {
 	min-width: 370px;
+	-webkit-box-flex: 1;
+	-ms-flex: 1 1 370px;
 	flex: 1 1 370px;
 }
 
@@ -264,8 +307,14 @@ header {
 /* footer */
 
 .footer__top {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: stretch;
+	-ms-flex-align: stretch;
 	align-items: stretch;
 	gap: 40px;
 	margin-bottom: 40px;
@@ -307,6 +356,8 @@ header {
 			color: #676a6c;
 			font-size: 14px;
 			font-weight: 500;
+			-webkit-transition: all ease-in-out 0.3s;
+			-o-transition: all ease-in-out 0.3s;
 			transition: all ease-in-out 0.3s;
 			position: relative;
 			&:hover {
@@ -314,6 +365,8 @@ header {
 			}
 			&::after {
 				width: 0;
+				-webkit-transition: width ease-in-out 0.3s;
+				-o-transition: width ease-in-out 0.3s;
 				transition: width ease-in-out 0.3s;
 				content: "";
 				position: absolute;
@@ -331,8 +384,14 @@ header {
 }
 
 footer .socials {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
 	justify-content: flex-end;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	gap: 16px;
 	a {
@@ -342,6 +401,8 @@ footer .socials {
 		border: 1px solid #ccc;
 		font-size: 24px;
 		color: #ccc;
+		-webkit-transition: all ease-in-out 0.3s;
+		-o-transition: all ease-in-out 0.3s;
 		transition: all ease-in-out 0.3s;
 	}
 	a:hover {
